# yield-optimize-poc

./: .gitignore  README.md  activate.sh  claude.md
docs/: first-goal.md  phase1.5_data_expansion.md  phase1_plan.md  phase1_results.md  phase2_plan.md  phase3_serving_optimization.md  phase4_multi_stage_ranking.md  project_overview.md
docs/research/: README.md  ipinyou-benchmark.md
serving/: .dockerignore  BENCHMARK.md  Cargo.toml  Dockerfile  docker-compose.yml  nginx.conf
serving/examples/: bench_single_inference.rs  test_model_loading.rs
serving/models/: deepfm_emb8_lr0.0001_dnn25612864_neg150_best.onnx  deepfm_emb8_lr0.0001_dnn25612864_neg150_best.onnx.data
serving/scripts/: bench_ranking.sh  benchmark.sh  compare_onnx_outputs.py  tune_threads.sh  wrk_predict.lua  wrk_predict_batch.lua
serving/src/: api.rs  features.rs  lib.rs  main.rs  model.rs
training/: .env.example  requirements.txt  setup_env.sh
training/configs/: model_config.yaml
training/scripts/: download_data.sh  evaluate_deepfm.sh  export_onnx.sh  train_deepfm.sh  validate_pipeline.sh
training/src/data/: load_data.py
training/src/evaluate/: evaluate.py
training/src/export/: export_autoint_onnx.py  export_onnx.py  quantize_onnx.py  verify_onnx.py
training/src/models/: autoint_trainer.py  deepfm_trainer.py
training/src/train/: train.py  train_autoint.py
training/src/validate/: pipeline.py
