[package]
name = "deepfm-serving"
version = "0.1.0"
edition = "2024"

[lib]
name = "deepfm_serving"
path = "src/lib.rs"

[[bin]]
name = "deepfm-serving"
path = "src/main.rs"

[dependencies]
# ONNX Runtime for model inference
ort = { version = "2.0.0-rc.11", features = ["xnnpack"] }
ndarray = "0.17"

# Web framework and async runtime
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }
